--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <head>
 	<meta charset="UTF-8">
 
-	<title>CyanogenMod | Android Community Operating System</title>
+	<title>CyanogenMod | Archive</title>
 	
 	<!-- Mobile viewport optimized: j.mp/bplateviewport -->
 	<meta name="viewport" content="width=device-width,initial-scale=1">
