--- a/contact.html
+++ b/contact.html
@@ -26,7 +26,9 @@
             <p>E-mail: bb.piotrekb@gmail.com</p>
             <br>
             <span>Zordon</span>
-            <p>tu juz sam wypelnij</p>
+            <p>Discord: Bobux#2208</p>
+            <p>Telegram: t.me/tzordon<p>
+                
         </div>
         <br><br><br>
         </div>
