--- a/devices.html
+++ b/devices.html
@@ -1,1 +1,65 @@
-tutaj beda wszystkie romy
+<!DOCTYPE html>
+<html>
+<head>
+  <meta charset="UTF-8">
+  <title>CM I9100</title>
+  <link rel="stylesheet" href="css/style.css">
+<style>
+		.button1 {
+			color: #ffffff;
+			background-color: #ff0000;
+			font-size: 19px;
+			border: 1px solid #2d63c8;
+			border-radius: 20px;
+			padding: 15px 50px;
+			cursor: pointer
+		}
+		.button1:hover {
+			color: #2d63c8;
+			background-color: #ffffff;
+		}
+
+    .button2 {
+			color: #ffffff;
+			background-color: #ff0000;
+			font-size: 19px;
+			border: 1px solid #2d63c8;
+			border-radius: 20px;
+			padding: 15px 50px;
+			cursor: pointer
+
+		}
+
+		.button2:hover {
+			color: #2d63c8;
+			background-color: #ffffff;
+		}
+
+</style>
+<body>
+	<div class="menu">
+		<header>
+			<img class="logo" src="assets/logo.png" alt="logo">
+			<nav>
+				<ul class="nav_links">
+					<li><a href="index.html">Home</a></li>
+					<li><a href="contact.html">Contact</a></li>
+					<li><a href="devices.html">Devices</a></li>
+				</ul>
+			</nav>
+		</header>
+	</div>
+</head>
+<body>
+
+<h1 class="soon">CyanogenMod Uploads</h1>
+<Div>
+<a href="i9100.html" class="button1" type="button" name="i9100" >Samsung Galaxy S2</a>
+<a href="cooper.html" class="button2" type="button" name="Ace" >Samsung Galaxy Ace</a>
+<a href="D855.html" class="button2" type="button" name="D855" >LG G3 (D855)</a>
+<a href="l9.html" class="button2" type="button" name="L9" >LG OPTIMUS L9</a>
+<a href="Condor.html" class="button2" type="button" name="Condor" >Motorola Moto E 2014 (Condor)</a>
+
+</Div>
+</body>
+</html>
