--- a/cooper.html
+++ b/cooper.html
@@ -20,6 +20,6 @@
             </div>
     <body>
         <img class="photo" src="assets/ace.png" alt="photo">
-        <a href="https://drive.google.com/file/d/1G0UumP_77qXrM5Bih5PiCDJ8Yxw9hDDz/view?usp=sharing" class="button2" type="button" name="button2" >CyanogenMod 7 Nightly Ace </a>
+        <button href="https://drive.google.com/file/d/1G0UumP_77qXrM5Bih5PiCDJ8Yxw9hDDz/view?usp=sharing" class="button2" type="button" name="button2" >CyanogenMod 7 Nightly Ace </button>
 
 </html>
