--- a/L9.html
+++ b/L9.html
@@ -20,6 +20,6 @@
             </div>
     <body>
         <img class="photo" src="assets/l9.png" alt="photo">
-        <a href="https://drive.google.com/file/d/1cG2-KiwxYUD5QqAi7U2XFY_pj5pG3bax/view?usp=sharing" class="button2" type="button" name="button2" >CyanogenMod 10.2 Nightly p760</a>
+        <button href="https://drive.google.com/file/d/1cG2-KiwxYUD5QqAi7U2XFY_pj5pG3bax/view?usp=sharing" class="button2" type="button" name="button2" >CyanogenMod 10.2 Nightly p760</button>
 
 </html>
