--- a/D855.html
+++ b/D855.html
@@ -20,6 +20,6 @@
             </div>
     <body>
         <img class="photo" src="assets/d855.png" alt="photo">
-        <a href="https://drive.google.com/file/d/1NxzL3511qNzrFIVzbH75mTwRHyYXNn9A/view?usp=sharing" class="button2" type="button" name="button2" >CyanogenMod 14.1 Nightly D855</a>
+        <button href="https://drive.google.com/file/d/1NxzL3511qNzrFIVzbH75mTwRHyYXNn9A/view?usp=sharing" class="button2" type="button" name="button2" >CyanogenMod 14.1 Nightly D855</button>
 
 </html>
