--- a/Condor.html
+++ b/Condor.html
@@ -20,6 +20,6 @@
             </div>
     <body>
         <img class="photo" src="assets/condor.png" alt="photo">
-        <a href="https://drive.google.com/file/d/1dDuleMxcZZyIslgQT1OZJtUwafWw1wKj/view?usp=sharing" class="button2" type="button" name="button2" >CyanogenMod 14.1 Nightly Condor</a>
+        <button href="https://drive.google.com/file/d/1dDuleMxcZZyIslgQT1OZJtUwafWw1wKj/view?usp=sharing" class="button2" type="button" name="button2" >CyanogenMod 14.1 Nightly Condor</button>
 
 </html>
