--- a/I9100.html
+++ b/I9100.html
@@ -1,25 +1,32 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <style> </style>
         <meta charset="UTF-8">
         <title>I9100</title>
-        <link  rel="stylesheet" href="css/style.css" />
-        <body>
-            <div class="menu">
-                <header>
-                    <img class="logo" src="assets/logo.png" alt="logo">
-                    <nav>
-                        <ul class="nav_links">
-                            <li><a href="index.html">Home</a></li>
-                            <li><a href="contact.html">Contact</a></li>
-                            <li><a href="devices.html">Devices</a></li>
-                        </ul>
-                    </nav>
-                </header>
-            </div>
+        <link rel="stylesheet" href="css/style.css">
+    </head>
     <body>
-        <img class="photo" src="assets/s2.png" alt="photo">
-        <a class="soon">Comming Soon</a>
-
+        <div class="menu">
+            <header>
+                <img class="logo" src="assets/logo.png" alt="logo">
+                <nav>
+                    <ul class="nav_links">
+                        <li><a href="index.html">Home</a></li>
+                        <li><a href="contact.html">Contact</a></li>
+                        <li><a href="devices.html">Devices</a></li>
+                    </ul>
+                </nav>
+            </header>
+        </div>
+        <div class="text">
+            <h1>List of avaible versions</h1>
+        </div>
+        <div class="device">
+            <img src="assets/s2.png">
+        </div>
+        <br><br>
+        <div class="btn">
+            <button class="button2" href="link">Cyanogenmod 14.1</button>
+        </div>
+    </body>
 </html>
