--- a/I9100.html
+++ b/I9100.html
@@ -26,7 +26,8 @@
         </div>
         <br><br>
         <div class="btn">
-            <button class="button2" href="link">Cyanogenmod 14.1</button>
+            <button class="button2" href="link">CyanogenMod 11 Nightly (SOON) </button>
+            <button class="button2" href="link">CyanogenMod 13 Nightly (SOON) </button>
         </div>
     </body>
 </html>
