--- a/devices.html
+++ b/devices.html
@@ -19,22 +19,6 @@
 			background-color: #ffffff;
 		}
 
-    .button2 {
-			color: #ffffff;
-			background-color: #ff0000;
-			font-size: 19px;
-			border: 1px solid #2d63c8;
-			border-radius: 20px;
-			padding: 15px 50px;
-			cursor: pointer
-
-		}
-
-		.button2:hover {
-			color: #2d63c8;
-			background-color: #ffffff;
-		}
-
 </style>
 <body>
 	<div class="menu">
@@ -55,10 +39,10 @@
 <h1 class="soon">CyanogenMod Uploads</h1>
 <Div>
 <a href="i9100.html" class="button1" type="button" name="i9100" >Samsung Galaxy S2</a>
-<a href="cooper.html" class="button2" type="button" name="Ace" >Samsung Galaxy Ace</a>
-<a href="D855.html" class="button2" type="button" name="D855" >LG G3 (D855)</a>
-<a href="l9.html" class="button2" type="button" name="L9" >LG OPTIMUS L9</a>
-<a href="Condor.html" class="button2" type="button" name="Condor" >Motorola Moto E 2014 (Condor)</a>
+<a href="cooper.html" class="button1" type="button" name="Ace" >Samsung Galaxy Ace</a>
+<a href="d855.html" class="button1" type="button" name="D855" >LG G3 (D855)</a>
+<a href="l9.html" class="button1" type="button" name="L9" >LG OPTIMUS L9</a>
+<a href="condor.html" class="button1" type="button" name="Condor" >Motorola Moto E 2014 (Condor)</a>
 
 </Div>
 </body>
