fixed some bugs

--- a/cooper.html
+++ b/cooper.html
@@ -26,7 +26,7 @@
         </div>
         <br><br>
         <div class="btn">
-            <button class="button2" href="https://drive.google.com/file/d/1G0UumP_77qXrM5Bih5PiCDJ8Yxw9hDDz/view?usp=sharing">Cyanogenmod 7</button>
+            <button class="button2" onclick="location.href = https://drive.google.com/file/d/1G0UumP_77qXrM5Bih5PiCDJ8Yxw9hDDz/view?usp=sharing'">Cyanogenmod 7</button>
         </div>
     </body>
 </html>
