--- a/Condor.html
+++ b/Condor.html
@@ -26,7 +26,7 @@
         </div>
         <br><br>
         <div class="btn">
-            <button class="button2" href="https://drive.google.com/file/d/1dDuleMxcZZyIslgQT1OZJtUwafWw1wKj/view?usp=sharing">Cyanogenmod 14.1 Nightly</button>
+            <button class="button2" onclick="location.href = 'https://drive.google.com/file/d/1dDuleMxcZZyIslgQT1OZJtUwafWw1wKj/view?usp=sharing'">Cyanogenmod 14.1 Nightly</button>
         </div>
     </body>
 </html>
