--- a/L9.html
+++ b/L9.html
@@ -26,7 +26,7 @@
         </div>
         <br><br>
         <div class="btn">
-            <button class="button2" href="https://drive.google.com/file/d/1cG2-KiwxYUD5QqAi7U2XFY_pj5pG3bax/view?usp=sharing">Cyanogenmod 10.2 Nightly</button>
+            <button class="button2" onclick="location.href = 'https://drive.google.com/file/d/1cG2-KiwxYUD5QqAi7U2XFY_pj5pG3bax/view?usp=sharing'" >Cyanogenmod 10.2 Nightly</button>
         </div>
     </body>
 </html>
