--- a/devices.html
+++ b/devices.html
@@ -6,11 +6,11 @@
   <link rel="stylesheet" href="css/style.css">
 <style>
 		.button1 {
-			color: #ffffff;
-			background-color: #ff0000;
+			color: #0e0707;
+			background-color: #48ff00;
 			font-size: 19px;
 			border: 1px solid #2d63c8;
-			border-radius: 20px;
+			border-radius: 10px;
 			padding: 15px 50px;
 			cursor: pointer
 		}
@@ -43,6 +43,7 @@
 <a href="d855.html" class="button1" type="button" name="D855" >LG G3 (D855)</a>
 <a href="l9.html" class="button1" type="button" name="L9" >LG OPTIMUS L9</a>
 <a href="condor.html" class="button1" type="button" name="Condor" >Motorola Moto E 2014 (Condor)</a>
+<a href="i9300.html" class="button1" type="button" name="i9300" >Samsung Galaxy S3 (i9300)</a>
 
 </Div>
 </body>
