--- a/i9300.html
+++ b/i9300.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
-        <title>I9100</title>
+        <title>S3</title>
         <link rel="stylesheet" href="css/style.css">
     </head>
     <body>
@@ -22,12 +22,11 @@
             <h1>List of avaible versions</h1>
         </div>
         <div class="device">
-            <img src="assets/s2.png">
+            <img src="assets/s3.png">
         </div>
         <br><br>
         <div class="btn">
-            <button class="button2" href="link">CyanogenMod 11 Nightly (SOON) </button>
-            <button class="button2" onclick="location.href = 'https://drive.google.com/file/d/1NPGp2E8Zg_T8dUZG9H6Mk2ilWmMm_GB_/view?usp=sharing'">CyanogenMod 13 Nightly </button>
+            <button class="button2" onclick="location.href = 'https://drive.google.com/file/d/18CALyx2eG-2lTEKceM4nic6WlwG36HU7/view?usp=sharing'" >Cyanogenmod 14.1 Nightly</button>
         </div>
     </body>
 </html>
