--- a/contact.html
+++ b/contact.html
@@ -28,6 +28,7 @@
             <span>Zordon</span>
             <p>Discord: Bobux#2208</p>
             <p>Telegram: t.me/tzordon<p>
+            <p>E-mail: contact@cm-archive.ml<p>
                 
         </div>
         <br><br><br>
