--- a/index.html
+++ b/index.html
@@ -18,15 +18,10 @@
                 </nav>
             </header>
         </div>
-        <div class="welcome">
-            <h1>Welcome to Cyanogenmod backup!</h1>
-            <span>With this backup, you can download any version of Cyanogenmod you want. This backup supports every supported device.</span>
-            
-        </div>
         <br><br><br>
         <div class="warning">
-            <h1>⚠️ WARNING ⚠️</h1>
-            <span>Please remember this is not official cyanogenmod website! It's just a backup.</span>
+            <h1>Goodbye!</h1>
+            <span>i decided to shutdown cm archive because it's anyways dead</span>
         </div>
     </body>
 </html>
